# mac2iosPbxproj

./: .gitignore  CMakeLists.txt  README.md  workspaceDeps.py
mac2iosPbxproj/: CMakeLists.txt  XMLReader.h  XMLReader.m  cEntry.c  cEntry.h  cMain.c  mac2iosPbxproj.entitlements  main.m  workspaceDeps.py
mac2iosPbxproj.xcodeproj/: project.pbxproj
mac2iosPbxproj.xcodeproj/xcshareddata/xcschemes/: libmac2iosPbxproj.xcscheme  mac2iosPbxproj.xcscheme
